fix wrap on social-list

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -64,6 +64,12 @@
   transform: scale(1.1);
 }
 
+@media only screen and (min-width: 375px) {
+  .social-list {
+    flex-wrap: nowrap;
+  }
+}
+
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
   .hero {
@@ -79,7 +85,6 @@
     gap: 8px;
     justify-content: flex-end;
     align-items: flex-end;
-    flex-wrap: nowrap;
   }
   .link-item > a {
     font-weight: 500;
